deploy/askedin/overlays/stage/video-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-gateway
  namespace: apps-stage
  labels:
    app.kubernetes.io/name: video-gateway
    app.kubernetes.io/part-of: ulw
spec:
  selector:
    app.kubernetes.io/name: video-gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      appProtocol: http
